@@ -52,91 +52,25 @@
     </dependencies>
 
     <build>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-            <plugins>
-
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20</version>
-                    <configuration>
-                        <useSystemClassLoader>false</useSystemClassLoader>
-                        <runOrder>random</runOrder>
-                        <useFile>false</useFile>
-                        <useSystemClassLoader>false</useSystemClassLoader>
-                        <!--runOrder>alphabetical</runOrder -->
-                        <!-- <rerunFailingTestsCount>3</rerunFailingTestsCount> -->
-                        <forkCount>3</forkCount>
-                        <reuseForks>true</reuseForks>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                        <skipAfterFailureCount>50</skipAfterFailureCount>
-                        <testFailureIgnore>true</testFailureIgnore>
-                        <failIfNoTests>false</failIfNoTests>
-                        <!--generateReports>false</generateReports -->
-                        <!-- <parallel>methods</parallel> -->
-                        <!-- <perCoreThreadCount>1</perCoreThreadCount> -->
-                        <!-- <parallel>classes</parallel> -->
-                         <threadCount>1</threadCount>
-                        <!-- <forkCount>2</forkCount> -->
-                        <!-- <reuseForks>true</reuseForks> -->
-
-                        <trimStackTrace>false</trimStackTrace>
-                        <reportFormat>plain</reportFormat>
-                        <!--redirectTestOutputToFile>true</redirectTestOutputToFile -->
-
-                        <systemPropertyVariables>
-                            <log4j.configuration>log4j.properties</log4j.configuration>
-                        </systemPropertyVariables>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                        <systemProperties>
-                            <property>
-                                <name>java.util.logging.config.file</name>-
-                                <value>src/test/resources/logging.properties</value>
-                            </property>
-                        </systemProperties>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>2.22.1</version>
-                    <configuration>
-                        <showSuccess>true</showSuccess>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.22.1</version>
-                    <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.7.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
-                </plugin>
-
-
-
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <skip>false</skip>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <includes>
+                        <!--Test* classes for the app testing -->
+                        <include>**/directory/Test*.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+        </plugins>
 
 
     </build>
